----------------------------------------------------------------------
 OmegaT 1.7.3 update 1 Changes
----------------------------------------------------------------------

1.7.3 update 1 vs. 1.7.3


  4 Enhancements
  5 Bugfixes

----------------------------------------------------------------------
1.7.3 update 1

  Enhancements:

  - Exceptions for EN.*: Fig., St., middle name.
  http://sourceforge.net/support/tracker.php?aid=1856354 
  
  Other enhancements:
  
  - Serbo-Croatian localisation updated to 1.7.3 (UI, readme, instant start, documentation)
  - Slovenian localisation updated to 1.7.3 (UI, readme, instant start, documentation)
  - Russian localisation updated to 1.7.3 (UI, readme, instant start, documentation)

  Bug fixes:

  - HTML entities not resolved in the XHTML filter 
  http://sourceforge.net/support/tracker.php?aid=1844968 

  - Prevent non-XML characters from entering the TMX 
  http://sourceforge.net/support/tracker.php?aid=1684825 
  
  - Relative paths not working under Windows/Java 1.4
  http://sourceforge.net/support/tracker.php?aid=1875331 

  - Mediawiki import - remove invalid chars in filename
  http://sourceforge.net/support/tracker.php?aid=1878113  

  - Relative paths with "similar names" not working
  http://sourceforge.net/support/tracker.php?aid=1879571   

----------------------------------------------------------------------
 OmegaT 1.7.3 Changes
----------------------------------------------------------------------

1.7.3 vs. 1.7.2


  6 Enhancements
  3 Bugfixes

----------------------------------------------------------------------
1.7.3


Contains a revised manual, two new localisations (Danish, polish) and bug fixes

 Other enhancements:
 
 - Revised manual

 - Danish 1.6.2 localisation + instant start
 - Polish 1.6.2 localisation + partial manual
 - Catalan localisation updated to 1.7.2
 - Belarusian UI updated to 1.7.2
 - French localisation updated to 1.7.3

 Bug fixes:
  